[gd_scene load_steps=8 format=2]

[ext_resource path="res://city.tscn" type="PackedScene" id=1]
[ext_resource path="res://stages/city_stage_3.gd" type="Script" id=2]
[ext_resource path="res://dialog/dialog_player.tscn" type="PackedScene" id=3]
[ext_resource path="res://stages/stage3_Camera2D.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61.6625, 147.801 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.8912, 204.178 )

[node name="city_stage_3" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="StaticBody2D7" parent="buildings" index="3"]
collision_layer = 0
collision_mask = 1

[node name="Camera2D" parent="." index="4"]
script = ExtResource( 4 )

[node name="TrueEndingTrigger" type="Area2D" parent="." index="11"]
position = Vector2( 680.542, -47.8493 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TrueEndingTrigger" index="0"]
shape = SubResource( 1 )

[node name="TrueEndingConvo" parent="." index="12" instance=ExtResource( 3 )]
dialog_file = "res://dialog/dialog_data/cora_true.json"

[node name="FalseEndingConvo" parent="." index="13" instance=ExtResource( 3 )]
dialog_file = "res://dialog/dialog_data/cora_false.json"

[node name="FirstMedusaConvo" parent="." index="15" instance=ExtResource( 3 )]
dialog_file = "res://dialog/dialog_data/cora_medusa_first.json"

[node name="FirstConvoTrigger" type="Area2D" parent="." index="16"]
position = Vector2( 672.962, 399.308 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FirstConvoTrigger" index="0"]
position = Vector2( 3.17841, -130.314 )
shape = SubResource( 2 )

[node name="Area2D" type="StaticBody2D" parent="." index="17"]
position = Vector2( 916.879, 215.246 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 3 )

[node name="HalfHealthConvo" parent="." index="18" instance=ExtResource( 3 )]
dialog_file = "res://dialog/dialog_data/half_health.json"

[node name="QuarterHealthConvo" parent="." index="19" instance=ExtResource( 3 )]
dialog_file = "res://dialog/dialog_data/quarter_health.json"
[connection signal="body_entered" from="TrueEndingTrigger" to="." method="_on_Area2D_body_entered"]
[connection signal="dialog_finished" from="TrueEndingConvo" to="." method="_on_TrueEndingConvo_dialog_finished"]
[connection signal="dialog_finished" from="FalseEndingConvo" to="." method="_on_FalseEndingConvo_dialog_finished"]
[connection signal="body_entered" from="FirstConvoTrigger" to="." method="_on_FirstConvoTrigger_body_entered"]
